--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: cat-env
-        run: cat ${{env.SIMPLE_ENV}}
+        run: echo ${{env.SIMPLE_ENV}}
