--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -27,4 +27,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: cat-env
-        run: echo ${{env.SIMPLE_ENV}}
+        run: |
+          echo SIMPLE_ENV: ${{env.SIMPLE_ENV}}
+          echo GITHUB_REF_NAME:  ${{ github.GITHUB_REF_NAME }}
+          echo ROLE_TO_ASSUME: ${{env.SIMPLE_ENV}}
+          
