--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -30,5 +30,6 @@ jobs:
         run: |
           echo SIMPLE_ENV: ${{env.SIMPLE_ENV}}
           echo GITHUB_REF_NAME:  ${{ github.GITHUB_REF_NAME }}
+          echo ref:  ${{ github.ref }}
           echo ROLE_TO_ASSUME: ${{env.SIMPLE_ENV}}
           
