--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           echo SIMPLE_ENV: ${{env.SIMPLE_ENV}}
           echo GITHUB_REF_NAME:  ${{ github.GITHUB_REF_NAME }}
+          echo REF_NAME:  ${{ github.REF_NAME }}
           echo GITHUB_HEAD_REF:  ${{ github.GITHUB_HEAD_REF }}
           echo ref:  ${{ github.ref }}
           echo ROLE_TO_ASSUME: ${{env.SIMPLE_ENV}}
